# convex-hull-assignment-Araya05s

./: README.md
QTIncrementalConvexHull/: CMakeLists.txt  drawingcanvas.cpp  drawingcanvas.h  drawingwindow.cpp  drawingwindow.ui  linewidget.cpp  linewidget.h  main.cpp
QTSlowConvexHull/: CMakeLists.txt  drawingcanvas.cpp  drawingcanvas.h  drawingwindow.cpp  drawingwindow.h  drawingwindow.ui  linewidget.cpp  linewidget.h
